syntax = "proto3";
package liubaninc.m0.wasm;

option go_package = "github.com/liubaninc/m0/x/wasm/types";

message NativeCodeDesc {
  // native code name
  string name = 1;
  // code version
  string version = 2;
  // digest of binary
  bytes digest = 3;
  // the previous verion
  string prev_version = 4;
  // api version
  int32 api_version = 5;
}

message WasmCodeDesc {
  string runtime = 1;
  string compiler = 2;
  bytes digest = 3;
  string vm_compiler = 4;
  string contract_type = 5;
}